<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.PagoEfectivoFragment"
    android:background="@color/fondo_proyecto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"> <!-- Margen inferior añadido -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_pagoefectivo"
                android:layout_margin="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_pago"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <!-- Texto "Nombre del titular" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalizar_compra"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"/> <!-- Margen inferior añadido -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empresa_pagoefectivo"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"/> <!-- Margen inferior añadido -->

        <!-- Texto "Número de tarjeta" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicio_pagoefectivo"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"/> <!-- Margen inferior añadido -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/codigo"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagar_antes_fecha"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"/> <!-- Margen inferior añadido -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puedes_pagar_en"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"/> <!-- Margen inferior añadido -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bancos"
            android:layout_margin="20dp"/>

    </LinearLayout>

</FrameLayout>