<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/itmCarItemMedicamento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <!-- LISTA DE MEDICAMENTOS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:background="@drawable/linear_layout_border"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/itmFotoMedicamento"
                android:layout_width="wrap_content"
                android:layout_height="112dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/paracetamol" />

            <TextView
                android:id="@+id/itmLblNombreM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="8dp"
                android:text="@string/itmLblNombreM"
                />

            <TextView
                android:id="@+id/itmLblFormaM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/itmLblFormaM"
                />

            <TextView
                android:id="@+id/itmLblConcentracionM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/itmLblConcentracionM"
                />

            <TextView
                android:id="@+id/itmLblPrecioM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/itmLblPrecioM"
                />

            <Button
                android:id="@+id/btnAgregarCarrito1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAgregarCarrito"
                android:layout_gravity="center_vertical"
                android:layout_margin="9dp"
                android:textSize="9sp"
                android:backgroundTint="@color/fondoBarra"
                android:textAllCaps="false"
                />

        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>